loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:8: error: not found: value >=
    case n>=3 => gauche()
          ^Poucet1:9: error: not found: value <=
    case n<=2 => droite()
          ^