loopdowhile.Poucet1.scala.code
var n = 0
while(sortieTrouvee()==false){
  if (estSurBiscuit()==true){
    n=n+1}
  for (i <- 1 to 5){
    avance()
  n match {
    case n>=3 => gauche()
    case n<=2 => droite()
  }
  }
}